k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-demo
  labels:
    app.kubernetes.io/name: cloud-native-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloud-native-demo
  ports:
    - name: http
      port: 80
      targetPort: http
